# perceived-brigthness

./: CMakeLists.txt  LICENSE  README.md
libcolor/: CMakeLists.txt  SRGBColor.cpp  SRGBColor.h  mathUtils.h
main/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  SRGBColor_tests.cpp
